# automata-rps

./: Cargo.toml  README.md
src/: constants.rs  main.rs  utils.rs
src/entities/: mod.rs
src/events/: mod.rs
src/plugins/: debug.rs  game.rs
src/resources/: mod.rs
