[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0" }
bevy_kira_audio = "0.21.0"
bevy_rand = { version = "0.8.0", features = ["wyrand"] }
bevy_spatial = "0.10.0"
rand = "0.8.5"

[features]
default = ['bevy/dynamic_linking']
standalone = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
